<resources>
    <string name="app_name">BookingHotelRoomSample</string>
    <string name="hotel">Отель</string>
    <string name="excellent">Превосходно</string>
    <string name="great">Отлично</string>
    <string name="good">Хорошо</string>
    <string name="satisfactory">Удовлетворительно</string>
    <string name="minimum_comfort_level">Минимальный уровень комфорта</string>
    <string name="rating_unknown">Рейтинг неизвестен</string>
    <string name="name_unknown">Название неизвестно</string>
    <string name="address_unknown">Адрес неизвестен</string>
    <string name="from">от</string>
    <string name="about_hotel">Об отеле</string>
    <string name="conveniences">Удобства</string>
    <string name="included">Что включено</string>
    <string name="not_included">Что не включено</string>
    <string name="the_most_necessary">Самое необходимое</string>
    <string name="to_choosing_room">К выбору номера</string>
    <string name="choose_room">Выбрать номер</string>
    <string name="for_tour_with_flight">за тур с перелётом</string>
    <string name="room_details">Подробно о номере</string>
    <string name="booking">Бронирование</string>
    <string name="departure">Вылет из</string>
    <string name="country_city">Страна, город</string>
    <string name="dates">Даты</string>
    <string name="number_of_nights">Кол-во ночей</string>
    <string name="room">Номер</string>
    <string name="nutrition">Питание</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="pay">Оплатить</string>
    <string name="order_paid">Заказ оплачен</string>
    <string name="super1">Супер!</string>
    <string name="unknown">Неизвестно</string>
    <string name="of_nights">ночей</string>
    <string name="buyer_information">Информация о покупателе</string>
    <string name="phone_number">Номер телефона</string>
    <string name="mail">Почта</string>
    <string name="data_and_receipt">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="phone_number_mask">+7 (***) ***-**-**</string>
    <string name="phone_number_prefix">+7 (</string>
    <string name="phone_number_mask_short">***) ***-**-**</string>
    <string name="tourist">турист</string>
    <string name="first">Первый</string>
    <string name="second">Второй</string>
    <string name="third">Третий</string>
    <string name="fourth">Четвёртый</string>
    <string name="fifth">Пятый</string>
    <string name="sixth">Шестой</string>
    <string name="seventh">Седьмой</string>
    <string name="eighth">Восьмой</string>
    <string name="ninth">Девятый</string>
    <string name="tenth">Десятый</string>
    <string name="first_name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="birth_date">Дата рождения</string>
    <string name="citizenship">Гражданство</string>
    <string name="passport_number">Номер загранпаспорта</string>
    <string name="passport_validity_period">Срок действия загранпаспорта</string>
    <string name="data_must_be_filled">Данные необходимо заполнить</string>
    <string name="tour_price">Тур</string>
    <string name="fuel_fee">Топливный сбор</string>
    <string name="service_fee">Сервисный сбор</string>
    <string name="to_be_paid">К оплате</string>
    <string name="order_accepted">Ваш заказ принят в работу</string>
    <string name="order_confirmation_part_1">Подтверждение заказа №</string>
    <string name="order_confirmation_part_2">может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
</resources>