<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:background="@drawable/frame_background_rounded"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/button_hide_or_show"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginVertical="13dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_rounded_6_background"
        android:backgroundTint="@color/blue_light"
        android:src="@drawable/arrow_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tourist_title_barrier"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tourist_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:gravity="start"
        android:text="@string/tourist"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_hide_or_show"
        app:layout_constraintBottom_toTopOf="@id/tourist_title_barrier"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="22sp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/tourist_title_barrier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="button_hide_or_show, tourist_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name"
        style="@style/BookingInputLayoutFilled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        app:boxBackgroundColor="@color/grey_screen_background"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:hint="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tourist_title_barrier"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:hintTextColor="@color/grey_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/blue_dark_input_text"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surname"
        style="@style/BookingInputLayoutFilled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="@color/grey_screen_background"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:hint="@string/surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:hintTextColor="@color/grey_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/blue_dark_input_text"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birth_date"
        style="@style/BookingInputLayoutFilled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="@color/grey_screen_background"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:hint="@string/birth_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surname"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:hintTextColor="@color/grey_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birth_date_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/blue_dark_input_text"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/citizenship"
        style="@style/BookingInputLayoutFilled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="@color/grey_screen_background"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:hint="@string/citizenship"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birth_date"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:hintTextColor="@color/grey_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/citizenship_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/blue_dark_input_text"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passport_number"
        style="@style/BookingInputLayoutFilled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="@color/grey_screen_background"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:hint="@string/passport_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/citizenship"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:hintTextColor="@color/grey_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passport_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/blue_dark_input_text"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passport_validity_period"
        style="@style/BookingInputLayoutFilled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:boxBackgroundColor="@color/grey_screen_background"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:hint="@string/passport_validity_period"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passport_number"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:hintTextColor="@color/grey_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passport_validity_period_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/blue_dark_input_text"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>