<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_screen_background"
    tools:context=".ui.booking.BookingFragment">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/scroll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/transparent"
                    android:src="@drawable/arrow_left"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/booking"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="70dp"
                    android:layout_marginTop="19dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/sf_pro_display_semibold"
                    android:text="@string/booking"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/frame_background_rounded" >

                <TextView
                    android:id="@+id/add_tourist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="16dp"
                    android:fontFamily="@font/sf_pro_display_semibold"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:text="@string/add_tourist" />

                <androidx.constraintlayout.utils.widget.ImageFilterButton
                    android:id="@+id/button_add_tourist"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="13dp"
                    android:background="@drawable/button_rounded_6_background"
                    android:backgroundTint="@color/blue"
                    android:src="@drawable/plus"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/pay"
                    style="@style/ButtonBlueBorderlessHeight48"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="28dp"
                    android:background="@drawable/button_rounded_15_background"
                    android:padding="15dp"
                    android:text="@string/pay"
                    tools:ignore="VisualLintButtonSize" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>